--- a/VandyMobile/MyVMViewController.xib
+++ b/VandyMobile/MyVMViewController.xib
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.32</string>
-		<string key="IBDocument.HIToolboxVersion">568.00</string>
+		<int key="IBDocument.SystemTarget">1536</int>
+		<string key="IBDocument.SystemVersion">12A269</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2818</string>
+		<string key="IBDocument.AppKitVersion">1187</string>
+		<string key="IBDocument.HIToolboxVersion">624.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">1900</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
+			<string>IBProxyObject</string>
 			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
-			<string>IBUIView</string>
 			<string>IBUILabel</string>
-			<string>IBProxyObject</string>
+			<string>IBUIView</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -42,7 +42,7 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{54, 165}, {212, 37}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -81,6 +81,7 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, 59}, {320, 367}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1069856795"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -95,6 +96,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{0, 59}, {320, 102}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="913953477"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -104,11 +106,27 @@
 									<string key="NSResourceName">NextMeetingCanvasV2@2x.png</string>
 								</object>
 							</object>
+							<object class="IBUIImageView" id="913953477">
+								<reference key="NSNextResponder" ref="906725394"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{20, 70}, {70, 70}}</string>
+								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="363668177"/>
+								<string key="NSReuseIdentifierKey">_NS:9</string>
+								<bool key="IBUIUserInteractionEnabled">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<object class="NSCustomResource" key="IBUIImage">
+									<string key="NSClassName">NSImage</string>
+									<string key="NSResourceName">534322_10150823513557391_1367024220_n.jpg</string>
+								</object>
+							</object>
 							<object class="IBUILabel" id="363668177">
 								<reference key="NSNextResponder" ref="906725394"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{104, 82}, {202, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="643461006"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -116,11 +134,6 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">First Last</string>
-								<object class="NSColor" key="IBUITextColor">
-									<int key="NSColorSpace">1</int>
-									<bytes key="NSRGB">MCAwIDAAA</bytes>
-								</object>
 								<nil key="IBUIHighlightedColor"/>
 								<object class="NSColor" key="IBUIShadowColor" id="120156651">
 									<int key="NSColorSpace">1</int>
@@ -128,6 +141,11 @@
 								</object>
 								<string key="IBUIShadowOffset">{0, 1}</string>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<string key="IBUIText">First Last</string>
+								<object class="NSColor" key="IBUITextColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MCAwIDAAA</bytes>
+								</object>
 								<int key="IBUITextAlignment">2</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">2</int>
@@ -139,12 +157,14 @@
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<int key="IBUIAutoshrinkMode">0</int>
 							</object>
 							<object class="IBUILabel" id="643461006">
 								<reference key="NSNextResponder" ref="906725394"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{110, 118}, {202, 22}}</string>
+								<string key="NSFrame">{{104, 111}, {202, 22}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="89386331"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -152,13 +172,13 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<nil key="IBUIHighlightedColor"/>
+								<int key="IBUIBaselineAdjustment">0</int>
 								<string key="IBUIText">first.m.last@vanderbilt.edu</string>
 								<object class="NSColor" key="IBUITextColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC41MTQ0NDkxMzkgMC41MTQ0NDkxMzkgMC41MTQ0NDkxMzkAA</bytes>
 								</object>
-								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">2</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
@@ -170,12 +190,14 @@
 									<int key="NSfFlags">16</int>
 								</object>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<int key="IBUIAutoshrinkMode">0</int>
 							</object>
 							<object class="IBUIButton" id="1033075535">
 								<reference key="NSNextResponder" ref="906725394"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{33, 277}, {115, 113}}</string>
+								<string key="NSFrame">{{20, 277}, {115, 113}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="268319198"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -198,8 +220,9 @@
 							<object class="IBUILabel" id="268319198">
 								<reference key="NSNextResponder" ref="906725394"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{67, 369}, {46, 21}}</string>
+								<string key="NSFrame">{{54, 369}, {46, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="409957715"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -207,39 +230,27 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<nil key="IBUIHighlightedColor"/>
+								<reference key="IBUIShadowColor" ref="120156651"/>
+								<string key="IBUIShadowOffset">{0, 1}</string>
+								<int key="IBUIBaselineAdjustment">0</int>
 								<string key="IBUIText">Tasks</string>
 								<object class="NSColor" key="IBUITextColor" id="162757058">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC4zMzMzMzMzMzMzAA</bytes>
 								</object>
-								<nil key="IBUIHighlightedColor"/>
-								<reference key="IBUIShadowColor" ref="120156651"/>
-								<string key="IBUIShadowOffset">{0, 1}</string>
-								<int key="IBUIBaselineAdjustment">0</int>
 								<int key="IBUITextAlignment">1</int>
 								<reference key="IBUIFontDescription" ref="159104207"/>
 								<reference key="IBUIFont" ref="687945850"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
-							</object>
-							<object class="IBUIImageView" id="913953477">
-								<reference key="NSNextResponder" ref="906725394"/>
-								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{20, 70}, {70, 70}}</string>
-								<reference key="NSSuperview" ref="906725394"/>
-								<reference key="NSNextKeyView" ref="363668177"/>
-								<string key="NSReuseIdentifierKey">_NS:9</string>
-								<bool key="IBUIUserInteractionEnabled">NO</bool>
-								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<object class="NSCustomResource" key="IBUIImage">
-									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">534322_10150823513557391_1367024220_n.jpg</string>
-								</object>
+								<int key="IBUIAutoshrinkMode">0</int>
 							</object>
 							<object class="IBUIButton" id="409957715">
 								<reference key="NSNextResponder" ref="906725394"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{185, 277}, {115, 113}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="992010058"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -264,6 +275,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{208, 367}, {69, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="366377339"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -271,22 +283,24 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Settings</string>
-								<reference key="IBUITextColor" ref="162757058"/>
 								<nil key="IBUIHighlightedColor"/>
 								<reference key="IBUIShadowColor" ref="120156651"/>
 								<string key="IBUIShadowOffset">{0, 1}</string>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<string key="IBUIText">Settings</string>
+								<reference key="IBUITextColor" ref="162757058"/>
 								<int key="IBUITextAlignment">1</int>
 								<reference key="IBUIFontDescription" ref="159104207"/>
 								<reference key="IBUIFont" ref="687945850"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<int key="IBUIAutoshrinkMode">0</int>
 							</object>
 							<object class="IBUIButton" id="271426063">
 								<reference key="NSNextResponder" ref="906725394"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{185, 174}, {115, 101}}</string>
+								<string key="NSFrame">{{185, 168}, {115, 101}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="893353385"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -311,6 +325,7 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{204, 248}, {78, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1033075535"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -318,22 +333,24 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Messages</string>
-								<reference key="IBUITextColor" ref="162757058"/>
 								<nil key="IBUIHighlightedColor"/>
 								<reference key="IBUIShadowColor" ref="120156651"/>
 								<string key="IBUIShadowOffset">{0, 1}</string>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<string key="IBUIText">Messages</string>
+								<reference key="IBUITextColor" ref="162757058"/>
 								<int key="IBUITextAlignment">1</int>
 								<reference key="IBUIFontDescription" ref="159104207"/>
 								<reference key="IBUIFont" ref="687945850"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<int key="IBUIAutoshrinkMode">0</int>
 							</object>
 							<object class="IBUIButton" id="89386331">
 								<reference key="NSNextResponder" ref="906725394"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{33, 174}, {115, 101}}</string>
+								<string key="NSFrame">{{20, 168}, {115, 101}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="931826467"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -356,8 +373,9 @@
 							<object class="IBUILabel" id="931826467">
 								<reference key="NSNextResponder" ref="906725394"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{60, 248}, {62, 21}}</string>
+								<string key="NSFrame">{{47, 248}, {62, 21}}</string>
 								<reference key="NSSuperview" ref="906725394"/>
+								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="271426063"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -365,20 +383,22 @@
 								<int key="IBUIContentMode">7</int>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-								<string key="IBUIText">Projects</string>
-								<reference key="IBUITextColor" ref="162757058"/>
 								<nil key="IBUIHighlightedColor"/>
 								<reference key="IBUIShadowColor" ref="120156651"/>
 								<string key="IBUIShadowOffset">{0, 1}</string>
 								<int key="IBUIBaselineAdjustment">0</int>
+								<string key="IBUIText">Projects</string>
+								<reference key="IBUITextColor" ref="162757058"/>
 								<int key="IBUITextAlignment">1</int>
 								<reference key="IBUIFontDescription" ref="159104207"/>
 								<reference key="IBUIFont" ref="687945850"/>
 								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
+								<int key="IBUIAutoshrinkMode">0</int>
 							</object>
 						</array>
 						<string key="NSFrame">{{0, -59}, {320, 485}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="567928726"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -393,6 +413,7 @@
 				</array>
 				<string key="NSFrame">{{0, 64}, {320, 367}}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="906725394"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -493,18 +514,18 @@
 						<reference key="object" ref="906725394"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="567928726"/>
-							<reference ref="913953477"/>
 							<reference ref="1069856795"/>
-							<reference ref="643461006"/>
 							<reference ref="363668177"/>
-							<reference ref="268319198"/>
+							<reference ref="913953477"/>
+							<reference ref="643461006"/>
 							<reference ref="1033075535"/>
+							<reference ref="268319198"/>
+							<reference ref="89386331"/>
+							<reference ref="931826467"/>
 							<reference ref="409957715"/>
 							<reference ref="992010058"/>
 							<reference ref="271426063"/>
 							<reference ref="893353385"/>
-							<reference ref="89386331"/>
-							<reference ref="931826467"/>
 						</array>
 						<reference key="parent" ref="191373211"/>
 						<string key="objectName">loggedInView</string>
@@ -610,12 +631,52 @@
 			<nil key="sourceID"/>
 			<int key="maxID">51</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">MyVMViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="backgroundImageView">UIImageView</string>
+						<string key="emailLabel">UILabel</string>
+						<string key="loggedInView">UIView</string>
+						<string key="loginButton">UIButton</string>
+						<string key="profileImageView">UIImageView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="backgroundImageView">
+							<string key="name">backgroundImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="emailLabel">
+							<string key="name">emailLabel</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="loggedInView">
+							<string key="name">loggedInView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="loginButton">
+							<string key="name">loginButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="profileImageView">
+							<string key="name">profileImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MyVMViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1536" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -628,6 +689,6 @@
 			<string key="NextMeetingCanvasV2@2x.png">{640, 200}</string>
 			<string key="VandyMobileBackgroundCanvas@2x.png">{640, 734}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">1900</string>
 	</data>
 </archive>
